tests/miniJava/neg/005242_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] length java ( ) { return 0 ; } }
